# sort_nvim_spell_file

./: Cargo.toml  README.md
src/: main.rs
